<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="32:21"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="-2dp"
            android:contentDescription="@string/app_logo_description"
            android:src="@drawable/petscard_login_header"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo"
            android:layout_marginVertical="@dimen/common_padding_default"
            android:layout_marginHorizontal="@dimen/common_padding_large"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/login_user_hint"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilUser"
            android:layout_marginVertical="@dimen/common_padding_default"
            android:layout_marginHorizontal="@dimen/common_padding_large"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/login_password_hint"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            android:layout_marginTop="@dimen/common_padding_default"
            app:icon="@drawable/ic_login"
            android:text="@string/action_login"/>

        <TextView
            android:id="@+id/tvPasswordForgotten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/action_password_forgotten"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="?attr/colorPrimary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordForgotten"
            android:layout_marginTop="@dimen/common_padding_default"
            android:text="@string/action_signup"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="16:3"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/common_padding_default"
            android:layout_marginBottom="-5dp"
            android:src="@drawable/petscard_login_footer"
            android:importantForAccessibility="no"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>